# models/category.js
@@ -1,8 +1,0 @@
-const mongoose = require("mongoose");
-
-const categorySchema = new mongoose.Schema({
-  title: { type: String, required: true },
-  dialogues: { type: [{ type: String }], default: [] },
-});
-
-module.exports = mongoose.model("Category", categorySchema);
