# models/user.js
@@ -9,12 +9,6 @@ let userSchema = new mongoose.Schema({
   token: { type: String },
   resetPasswordToken: { type: String },
   resetPasswordExpiry: { type: Date },
-  categories: [
-    {
-      type: mongoose.Schema.Types.ObjectId,
-      ref: "Category",
-    },
-  ],
 });
 
 userSchema.methods.removeFields = function () {
@@ -24,7 +18,6 @@ userSchema.methods.removeFields = function () {
     token,
     resetPasswordExpiry,
     resetPasswordToken,
-    categories,
     ...updatedObject
   } = obj;
   return updatedObject;
