# swagger_output.json
@@ -21,10 +21,6 @@
       "description": "Sign Up , Login and Logout users"
     },
     {
-      "name": "User Category",
-      "description": "User`s categories and dialogue"
-    },
-    {
       "name": "Login Activity",
       "description": "Login Activity routes"
     }
@@ -101,11 +97,11 @@
                   "type": "string",
                   "example": "User-password"
                 },
-                "fName": {
+                "fname": {
                   "type": "string",
                   "example": "Noob"
                 },
-                "lName": {
+                "lname": {
                   "type": "string",
                   "example": "Master"
                 }
@@ -1529,382 +1525,6 @@
           }
         }
       }
-    },
-    "/user/category/get": {
-      "post": {
-        "tags": [
-          "User Category"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "Update user dialogue",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {}
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "User Cateories",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "_id": {
-                    "type": "string",
-                    "example": "61c8af95598a5a9b7a56ee92"
-                  },
-                  "title": {
-                    "type": "string",
-                    "example": "INTRO"
-                  },
-                  "dialogues": {
-                    "type": "array",
-                    "example": [
-                      "abcd"
-                    ],
-                    "items": {
-                      "type": "string"
-                    }
-                  },
-                  "__v": {
-                    "type": "number",
-                    "example": 1
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "400": {
-            "description": "User not found",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Bad Request"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Token BlackListed"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Forbidden"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "500": {
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Error message"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            },
-            "description": "Error occured"
-          }
-        }
-      }
-    },
-    "/user/category/create/category": {
-      "post": {
-        "tags": [
-          "User Category"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "Create Category",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "categoryName": {
-                  "type": "string",
-                  "example": "INTRO"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "User Cateories",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "_id": {
-                    "type": "string",
-                    "example": "61c8af95598a5a9b7a56ee92"
-                  },
-                  "title": {
-                    "type": "string",
-                    "example": "INTRO"
-                  },
-                  "dialogues": {
-                    "type": "array",
-                    "example": [],
-                    "items": {}
-                  },
-                  "__v": {
-                    "type": "number",
-                    "example": 1
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "400": {
-            "description": "User not found",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Bad Request"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Token BlackListed"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Forbidden"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "500": {
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Error message"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            },
-            "description": "Error occured"
-          }
-        }
-      }
-    },
-    "/user/category/update/dialogue": {
-      "post": {
-        "tags": [
-          "User Category"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "Update user dialogue",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "categoryId": {
-                  "type": "string",
-                  "example": "61c8af95598a5a9b7a56ee92"
-                },
-                "dialogue": {
-                  "type": "string",
-                  "example": "abcd"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "User Cateories",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "_id": {
-                    "type": "string",
-                    "example": "61c8af95598a5a9b7a56ee92"
-                  },
-                  "title": {
-                    "type": "string",
-                    "example": "INTRO"
-                  },
-                  "dialogues": {
-                    "type": "array",
-                    "example": [
-                      "abcd"
-                    ],
-                    "items": {
-                      "type": "string"
-                    }
-                  },
-                  "__v": {
-                    "type": "number",
-                    "example": 1
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "400": {
-            "description": "User not found",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Bad Request"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Token BlackListed"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Forbidden"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "500": {
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Error message"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            },
-            "description": "Error occured"
-          }
-        }
-      }
     }
   },
   "definitions": {
@@ -1976,31 +1596,6 @@
         "resetPasswordExpiry": {
           "type": "string",
           "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYxYmY3N2M4MTcwMWYwM2QxMGZkOTBlYyIsInRva2VuX2lkIjoiMzkwMk9HRUwwOTEzREFESiIsImlhdCI6MTYzOTkzNzk5Mn0.noLtLpwevdnkhFU9uOKepT2Ynd-rjnRCCeLA3yd323g"
-        },
-        "categories": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "_id": {
-                "type": "string",
-                "example": "61c8af95598a5a9a7a56ee92"
-              },
-              "title": {
-                "type": "string",
-                "example": "INTRO"
-              },
-              "dialogues": {
-                "type": "array",
-                "example": [
-                  "abcd"
-                ],
-                "items": {
-                  "type": "string"
-                }
-              }
-            }
-          }
         }
       }
     },
@@ -2042,28 +1637,6 @@
         "device": {
           "type": "string",
           "example": "PostmanRuntime/7.28.4"
-        }
-      }
-    },
-    "Category": {
-      "type": "object",
-      "properties": {
-        "_id": {
-          "type": "string",
-          "example": "61c8af95598a5a9b7a56ee92"
-        },
-        "title": {
-          "type": "string",
-          "example": "INTRO"
-        },
-        "dialogues": {
-          "type": "array",
-          "example": [
-            "abcd"
-          ],
-          "items": {
-            "type": "string"
-          }
         }
       }
     }
